Fixed dashboard tripple dot z-index

--- a/cosinnus/static/less/v2/dashboard.less
+++ b/cosinnus/static/less/v2/dashboard.less
@@ -586,7 +586,7 @@
 		position: absolute;
 		right: 16px;
 		margin-top: 10px;
-		z-index: 5;
+		z-index: 4;
 		
 		.dropdown-toggle {
 			font-size: 18px;
